fix /banlist calling toString on component