@@ -5,6 +5,7 @@ import net.godlycow.org.essc.command.Command;
 import net.godlycow.org.essc.punishment.PunishmentManager;
 import net.godlycow.org.essc.punishment.PunishmentManager.BanEntry;
 import net.godlycow.org.essc.punishment.PunishmentManager.IpBanEntry;
+import net.kyori.adventure.text.Component;
 import org.bukkit.command.CommandSender;
 
 import java.util.*;
@@ -39,13 +40,14 @@ public class BanListCommand extends Command {
 
         switch (subCommand) {
             case "players", "player", "p" -> showPlayerBans(sender, page);
-            case "ips", "ip", "i" -> showIpBans(sender, page);
-            case "history", "h" -> showRecentBans(sender, page);
-            default -> showAllBans(sender, page);
+            case "ips", "ip", "i"         -> showIpBans(sender, page);
+            case "history", "h"           -> showRecentBans(sender, page);
+            default                       -> showAllBans(sender, page);
         }
 
         return true;
     }
+
 
     private void showPlayerBans(CommandSender sender, int page) {
         List<BanEntry> bans = punishmentManager.getActiveBans();
@@ -55,17 +57,16 @@ public class BanListCommand extends Command {
             return;
         }
 
-        showBanListHeader(sender, "player", bans.size(), page, (int) Math.ceil(bans.size() / (double) BANS_PER_PAGE));
+        int totalPages = totalPages(bans.size());
+        showBanListHeader(sender, "player", bans.size(), page, totalPages);
 
         int start = (page - 1) * BANS_PER_PAGE;
-        int end = Math.min(start + BANS_PER_PAGE, bans.size());
-
+        int end   = Math.min(start + BANS_PER_PAGE, bans.size());
         for (int i = start; i < end; i++) {
-            BanEntry entry = bans.get(i);
-            sender.sendMessage(formatPlayerBanEntry(sender, entry, i + 1));
+            sender.sendMessage(playerBanEntry(sender, bans.get(i), i + 1));
         }
 
-        showBanListFooter(sender, page, (int) Math.ceil(bans.size() / (double) BANS_PER_PAGE));
+        showBanListFooter(sender, page, totalPages);
     }
 
     private void showIpBans(CommandSender sender, int page) {
@@ -76,181 +77,160 @@ public class BanListCommand extends Command {
             return;
         }
 
-        showBanListHeader(sender, "ip", bans.size(), page, (int) Math.ceil(bans.size() / (double) BANS_PER_PAGE));
+        int totalPages = totalPages(bans.size());
+        showBanListHeader(sender, "ip", bans.size(), page, totalPages);
 
         int start = (page - 1) * BANS_PER_PAGE;
-        int end = Math.min(start + BANS_PER_PAGE, bans.size());
-
+        int end   = Math.min(start + BANS_PER_PAGE, bans.size());
         for (int i = start; i < end; i++) {
-            IpBanEntry entry = bans.get(i);
-            sender.sendMessage(formatIpBanEntry(sender, entry, i + 1));
+            sender.sendMessage(ipBanEntry(sender, bans.get(i), i + 1));
         }
 
-        showBanListFooter(sender, page, (int) Math.ceil(bans.size() / (double) BANS_PER_PAGE));
+        showBanListFooter(sender, page, totalPages);
     }
 
     private void showAllBans(CommandSender sender, int page) {
-        List<BanEntry> playerBans = punishmentManager.getActiveBans();
-        List<IpBanEntry> ipBans = punishmentManager.getActiveIpBans();
+        List<BanEntry>   playerBans = punishmentManager.getActiveBans();
+        List<IpBanEntry> ipBans     = punishmentManager.getActiveIpBans();
+        int total = playerBans.size() + ipBans.size();
 
-        int totalBans = playerBans.size() + ipBans.size();
-
-        if (totalBans == 0) {
+        if (total == 0) {
             sender.sendMessage(lang.get(sender, "banlist.no_bans"));
             return;
         }
 
-        List<Object> allBans = new ArrayList<>();
-        allBans.addAll(playerBans);
-        allBans.addAll(ipBans);
-
-        allBans.sort((a, b) -> {
-            long timeA = (a instanceof BanEntry be) ? be.time() : ((IpBanEntry) a).time();
-            long timeB = (b instanceof BanEntry be) ? be.time() : ((IpBanEntry) b).time();
-            return Long.compare(timeB, timeA);
+        List<Object> all = new ArrayList<>();
+        all.addAll(playerBans);
+        all.addAll(ipBans);
+        all.sort((a, b) -> {
+            long ta = (a instanceof BanEntry be)     ? be.time() : ((IpBanEntry) a).time();
+            long tb = (b instanceof BanEntry be)     ? be.time() : ((IpBanEntry) b).time();
+            return Long.compare(tb, ta);
         });
 
-        int totalPages = (int) Math.ceil(allBans.size() / (double) BANS_PER_PAGE);
+        int totalPages = totalPages(all.size());
         if (page > totalPages) page = totalPages;
 
-        Map<String, String> headerPlaceholders = new HashMap<>();
-        headerPlaceholders.put("page", String.valueOf(page));
-        headerPlaceholders.put("total", String.valueOf(totalPages));
-        headerPlaceholders.put("count", String.valueOf(totalBans));
-        headerPlaceholders.put("players", String.valueOf(playerBans.size()));
-        headerPlaceholders.put("ips", String.valueOf(ipBans.size()));
-        sender.sendMessage(lang.get(sender, "banlist.all.header", headerPlaceholders));
+        sender.sendMessage(lang.get(sender, "banlist.all.header", Map.of(
+                "page",    String.valueOf(page),
+                "total",   String.valueOf(totalPages),
+                "count",   String.valueOf(total),
+                "players", String.valueOf(playerBans.size()),
+                "ips",     String.valueOf(ipBans.size())
+        )));
 
         int start = (page - 1) * BANS_PER_PAGE;
-        int end = Math.min(start + BANS_PER_PAGE, allBans.size());
-
+        int end   = Math.min(start + BANS_PER_PAGE, all.size());
         for (int i = start; i < end; i++) {
-            Object entry = allBans.get(i);
-            if (entry instanceof BanEntry be) {
-                sender.sendMessage(formatPlayerBanEntry(sender, be, i + 1));
-            } else if (entry instanceof IpBanEntry ie) {
-                sender.sendMessage(formatIpBanEntry(sender, ie, i + 1));
-            }
+            Object entry = all.get(i);
+            if (entry instanceof BanEntry be)        sender.sendMessage(playerBanEntry(sender, be, i + 1));
+            else if (entry instanceof IpBanEntry ie) sender.sendMessage(ipBanEntry(sender, ie, i + 1));
         }
 
         showBanListFooter(sender, page, totalPages);
-
         sender.sendMessage(lang.get(sender, "banlist.filter_hint"));
     }
 
-    private void showRecentBans(CommandSender sender, int limit) {
-        List<BanEntry> playerBans = punishmentManager.getAllBans();
-        List<IpBanEntry> ipBans = punishmentManager.getAllIpBans();
-
-        List<Object> allBans = new ArrayList<>();
-        allBans.addAll(playerBans);
-        allBans.addAll(ipBans);
-
-        allBans.sort((a, b) -> {
-            long timeA = (a instanceof BanEntry be) ? be.time() : ((IpBanEntry) a).time();
-            long timeB = (b instanceof BanEntry be) ? be.time() : ((IpBanEntry) b).time();
-            return Long.compare(timeB, timeA);
+    private void showRecentBans(CommandSender sender, int page) {
+        List<Object> all = new ArrayList<>();
+        all.addAll(punishmentManager.getAllBans());
+        all.addAll(punishmentManager.getAllIpBans());
+        all.sort((a, b) -> {
+            long ta = (a instanceof BanEntry be)     ? be.time() : ((IpBanEntry) a).time();
+            long tb = (b instanceof BanEntry be)     ? be.time() : ((IpBanEntry) b).time();
+            return Long.compare(tb, ta);
         });
 
         sender.sendMessage(lang.get(sender, "banlist.history.header"));
 
         int count = 0;
-        for (Object entry : allBans) {
-            if (count++ >= 10) break;
-            if (entry instanceof BanEntry be) {
-                sender.sendMessage(formatPlayerBanEntry(sender, be, count));
-            } else if (entry instanceof IpBanEntry ie) {
-                sender.sendMessage(formatIpBanEntry(sender, ie, count));
-            }
+        for (Object entry : all) {
+            if (count >= 10) break;
+            count++;
+            if (entry instanceof BanEntry be)        sender.sendMessage(playerBanEntry(sender, be, count));
+            else if (entry instanceof IpBanEntry ie) sender.sendMessage(ipBanEntry(sender, ie, count));
         }
     }
 
+
     private void showBanListHeader(CommandSender sender, String type, int count, int page, int totalPages) {
-        Map<String, String> placeholders = new HashMap<>();
-        placeholders.put("type", type);
-        placeholders.put("count", String.valueOf(count));
-        placeholders.put("page", String.valueOf(page));
-        placeholders.put("total", String.valueOf(totalPages));
-        sender.sendMessage(lang.get(sender, "banlist." + type + ".header", placeholders));
+        sender.sendMessage(lang.get(sender, "banlist." + type + ".header", Map.of(
+                "type",  type,
+                "count", String.valueOf(count),
+                "page",  String.valueOf(page),
+                "total", String.valueOf(totalPages)
+        )));
     }
 
-    private void showBanListFooter(CommandSender sender, int currentPage, int totalPages) {
+    private void showBanListFooter(CommandSender sender, int page, int totalPages) {
         if (totalPages <= 1) return;
-
-        Map<String, String> placeholders = new HashMap<>();
-        placeholders.put("current", String.valueOf(currentPage));
-        placeholders.put("total", String.valueOf(totalPages));
-        placeholders.put("prev", String.valueOf(currentPage - 1));
-        placeholders.put("next", String.valueOf(currentPage + 1));
-
-        sender.sendMessage(lang.get(sender, "banlist.footer", placeholders));
+        sender.sendMessage(lang.get(sender, "banlist.footer", Map.of(
+                "current", String.valueOf(page),
+                "total",   String.valueOf(totalPages),
+                "prev",    String.valueOf(page - 1),
+                "next",    String.valueOf(page + 1)
+        )));
     }
 
-    private String formatPlayerBanEntry(CommandSender sender, BanEntry entry, int index) {
+    private Component playerBanEntry(CommandSender sender, BanEntry entry, int index) {
         boolean isTemp = entry.expires() > 0;
-        String key = isTemp ? "banlist.entry.player.temp" : "banlist.entry.player.perm";
-
-        Map<String, String> placeholders = new HashMap<>();
-        placeholders.put("index", String.valueOf(index));
-        placeholders.put("player", entry.name());
-        placeholders.put("reason", entry.reason());
-        placeholders.put("banner", entry.banner());
-        placeholders.put("time", formatTimeAgo(entry.time()));
-        placeholders.put("expires", isTemp ? formatTimeRemaining(entry.expires()) : "Never");
-
-        return lang.get(sender, key, placeholders).toString();
+        return lang.get(sender, isTemp ? "banlist.entry.player.temp" : "banlist.entry.player.perm", Map.of(
+                "index",   String.valueOf(index),
+                "player",  entry.name(),
+                "reason",  entry.reason(),
+                "banner",  entry.banner(),
+                "time",    formatTimeAgo(entry.time()),
+                "expires", isTemp ? formatTimeRemaining(entry.expires()) : "Never"
+        ));
     }
 
-    private String formatIpBanEntry(CommandSender sender, IpBanEntry entry, int index) {
+    private Component ipBanEntry(CommandSender sender, IpBanEntry entry, int index) {
         boolean isTemp = entry.expires() > 0;
-        String key = isTemp ? "banlist.entry.ip.temp" : "banlist.entry.ip.perm";
+        return lang.get(sender, isTemp ? "banlist.entry.ip.temp" : "banlist.entry.ip.perm", Map.of(
+                "index",   String.valueOf(index),
+                "ip",      entry.ip(),
+                "reason",  entry.reason(),
+                "banner",  entry.banner(),
+                "time",    formatTimeAgo(entry.time()),
+                "expires", isTemp ? formatTimeRemaining(entry.expires()) : "Never"
+        ));
+    }
 
-        Map<String, String> placeholders = new HashMap<>();
-        placeholders.put("index", String.valueOf(index));
-        placeholders.put("ip", entry.ip());
-        placeholders.put("reason", entry.reason());
-        placeholders.put("banner", entry.banner());
-        placeholders.put("time", formatTimeAgo(entry.time()));
-        placeholders.put("expires", isTemp ? formatTimeRemaining(entry.expires()) : "Never");
-
-        return lang.get(sender, key, placeholders).toString();
+    private int totalPages(int size) {
+        return Math.max(1, (int) Math.ceil(size / (double) BANS_PER_PAGE));
     }
 
     private String formatTimeAgo(long timestamp) {
-        long diff = System.currentTimeMillis() - timestamp;
-        long days = TimeUnit.MILLISECONDS.toDays(diff);
-        long hours = TimeUnit.MILLISECONDS.toHours(diff) % 24;
+        long diff    = System.currentTimeMillis() - timestamp;
+        long days    = TimeUnit.MILLISECONDS.toDays(diff);
+        long hours   = TimeUnit.MILLISECONDS.toHours(diff) % 24;
         long minutes = TimeUnit.MILLISECONDS.toMinutes(diff) % 60;
-
-        if (days > 0) return days + "d ago";
-        if (hours > 0) return hours + "h ago";
+        if (days    > 0) return days + "d ago";
+        if (hours   > 0) return hours + "h ago";
         if (minutes > 0) return minutes + "m ago";
         return "Just now";
     }
 
     private String formatTimeRemaining(long timestamp) {
-        long diff = timestamp - System.currentTimeMillis();
+        long diff    = timestamp - System.currentTimeMillis();
         if (diff <= 0) return "Expired";
-
-        long days = TimeUnit.MILLISECONDS.toDays(diff);
-        long hours = TimeUnit.MILLISECONDS.toHours(diff) % 24;
+        long days    = TimeUnit.MILLISECONDS.toDays(diff);
+        long hours   = TimeUnit.MILLISECONDS.toHours(diff) % 24;
         long minutes = TimeUnit.MILLISECONDS.toMinutes(diff) % 60;
-
-        if (days > 0) return days + "d " + hours + "h";
-        if (hours > 0) return hours + "h " + minutes + "m";
+        if (days    > 0) return days + "d " + hours + "h";
+        if (hours   > 0) return hours + "h " + minutes + "m";
         return minutes + "m";
     }
 
     @Override
     public List<String> tabComplete(CommandSender sender, String[] args) {
         if (args.length == 1) {
-            List<String> options = Arrays.asList("players", "ips", "all", "history", "help");
-            return options.stream()
-                    .filter(s -> s.toLowerCase().startsWith(args[0].toLowerCase()))
+            return List.of("players", "ips", "all", "history", "help").stream()
+                    .filter(s -> s.startsWith(args[0].toLowerCase()))
                     .collect(Collectors.toList());
         }
-        if (args.length == 2 && args[0].matches("(players|ips|all)")) {
-            return Arrays.asList("1", "2", "3");
+        if (args.length == 2 && args[0].matches("players|ips|all")) {
+            return List.of("1", "2", "3");
         }
         return Collections.emptyList();
     }
